fix contrasts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,7 +75,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  color: #fff;
+  
 }
 
 html,
